2003-01-13  Robin Ericsson  <lobbin@localhost.nu>

	* src/gnome-mud.h (destroy): Changed proto.

	* src/init.c (destroy): Changed from void to gboolean, returning TRUE
	if we want to keep the main window.
	(main_window): Changed signal from delete_event to delete-event.

	* src/tray.c (destroy): Removed proto already existing in gnome.mud.h.

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* configure.ac: Remove call to AM_GNU_GETTEXT_VERSION, which confuses
	aclocal on some distros.

	* python.c (pymud_version): Pass correct arguments to
	gtk_box_pack_start(). Patch from Aravi. (This code is currently
	disabled).

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/net.c: Fix the path for connection status icons.

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/tray.c (tray_menu): Show/Hide labels were inverted.
	
	* src/pixmaps/Makefile.am: Embarrasing error...

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/tray.c (tray_menu): Add mnemonics for menu items, change
	"Exit" to "Quit". Added separator.

2003-01-09  Jordi Mallach  <jordi@sindominio.net>

	* src/map.c (path_type_dialog): Fix compile warning.

	* src/init.c (window_menu_file_close), (main):
	* src/net.c (action_send_to_connection): Only show connection
	tabs if there's more than one, and set the main tab label to the
	connection name.
	Add a connection status icon to the connection tab.
	* src/eggtrayicon.[ch]:
	* src/tray.c: New file, notification area icon to show/hide the
	main window, and notify about new data.
	Patches by Nuno Sousa <nunofgs@punkass.com>.

	* src/Makefile.am (SUBDIRS): Add pixmaps.
	(GMPIXMAPSDIR): Added new directory for gnome-mud icons.
	(gnome-mud_SOURCES): Updated.
	* src/pixmaps/Makefile.am: New.
	* src/pixmaps/connection.png, src/pixmaps/connection-offline.png:
	Added.

	* configure.ac (AC_OUTPUT): Updated.

	* NEWS: Updated.

2004-01-03  Jordi Mallach  <jordi@sindominio.net>
