@@ -17,8 +17,8 @@
  */
 
 #include "config.h"
-#ifdef USE_PYTHON
 
+#ifdef USE_PYTHON
 #include <sys/types.h>
 #include <locale.h>
 #include <gnome.h>
@@ -29,11 +29,10 @@
 #include <Python.h>
 #include <structmember.h>
 
-/* FIXME
 #ifdef USE_PYGTK
 #include <pygtk/pygtk.h>
+#include <gtk/gtk.h>
 #endif
-*/
 
 #include "gnome-mud.h"
 
@@ -49,11 +48,10 @@ static PyObject *ConnectionError;
 extern CONNECTION_DATA *main_connection;
 extern CONNECTION_DATA *connections[MAX_CONNECTIONS];
 extern GtkWidget *main_notebook;
-/* FIXME
+
 #ifdef USE_PYGTK
 extern GtkWidget *box_user;
 #endif
-*/
 
 /* Interface to the CONNECTION_DATA structure */
 staticforward PyTypeObject pyConnection_ConnectionType;
@@ -263,24 +261,26 @@ static PyObject *pymud_version (PyObject *self, PyObject *args)
 	return Py_BuildValue("s",VERSION);
 }
 
-/* FIXME
 #ifdef USE_PYGTK
 static PyObject *pymud_pygtk_add_widget (PyObject *self, PyObject *args)
 {
 	PyGObject *widget;
+	GtkWidget *gwidget;
 	int expand = TRUE, fill = TRUE, padding = 5;
 
 	if (!PyArg_ParseTuple(args, "O|iii", &widget, &expand, &fill, &padding))
 		return NULL;
 
 	Py_INCREF(widget);
-	gtk_box_pack_start (GTK_BOX (box_user), GTK_WIDGET(widget->obj), (gboolean)expand, (gboolean)fill, (guint)padding);
+
+	gwidget = GTK_WIDGET(widget->obj);
+	gtk_box_pack_start (GTK_BOX (box_user), gwidget, (gboolean)expand, (gboolean)fill, (guint)padding);
+	gtk_widget_show(gwidget);
 
 	Py_INCREF(Py_None);
 	return Py_None;
 }
 #endif
-*/
 
 /* System functions */
 gchar *python_process_input(CONNECTION_DATA *connection, gchar *input)
@@ -382,11 +382,9 @@ static PyMethodDef GnomeMudMethods[] =
     {"version",                 pymud_version,                 METH_VARARGS},
     {"register_input_handler",  pymud_register_input_handler,  METH_VARARGS},
     {"register_output_handler", pymud_register_output_handler, METH_VARARGS},
-/* FIXME
 #ifdef USE_PYGTK
     {"add_user_widget",         pymud_pygtk_add_widget,        METH_VARARGS},
 #endif
-*/
     {NULL, NULL}
 };
 
