@@ -1,3 +1,8 @@
+2003-01-18  Jordi Mallach  <jordi@sindominio.net>
+
+	* src/python.c (pymud_pygtk_add_widget): Add missing gtk_widget_show()
+	call to fix PyGTK support. Patch from Adam Luchjenbroers.
+
 2003-01-13  Robin Ericsson  <lobbin@localhost.nu>
 
 	* src/gnome-mud.h (destroy): Changed proto.
